# Zeal-NativeEmulator

./: .dockerignore  .gitignore  Makefile  README.md  linux32-cross.build  meson.build  meson_options.txt  raspberrypi-gpi2.build  raspberrypi0-cross.build  raspberrypi3-cross.build  raspberrypi64-cross.build  wasm-cross.build  win32-cross.build  win64-cross.build
.github/actions/deploy-pages/: action.yml
.github/actions/meson-build/: action.yml
.github/workflows/: build-linux.yml  build-linux32.yml  build-linux64.yml  build-macos-arm.yml  build-macos-intel.yml  build-macos.yml  build-rpi.yml  build-wasm.yml  build-win32.yml  build-win64.yml  build-windows.yml  build.yml
assets/: index.css  index.html  index.js  meson.build
assets/fonts/: meson.build
assets/resources/: gamecontrollerdb.txt  meson.build
assets/shaders/: bitmap_shader.glsl  gfx_debug.glsl  gfx_shader.glsl  meson.build  shader_template.h.in  sprite_shader.glsl  sprite_vertex_shader.glsl  text_debug.glsl  text_shader.glsl
assets/shaders/desktop/: gfx_shader.glsl  meson.build  text_debug.glsl  text_shader.glsl
assets/wasm/minimal/: index.css  index.html  index.js
assets/wasm/native/: index.html
assets/web/: index.css  index.html  index.js
dbg/: conn.c  gdbstub.c  packet.c  utils.c
docker/rpi/: Dockerfile.arm64  Dockerfile.armhf  build-all.sh  docker-compose.yml  raylib-drm-ssh-signals.patch
extensions/: cf.lua
hw/: compactflash.c  extensions.c  flash.c  hostfs.c  i2c.c  keyboard.c  main.c  meson.build  mmu.c  mouse.c  pio.c  ram.c  semihost.c  uart.c  z80.c  zeal.c  zeal_dbg.c  zeal_debugger.c  zeal_input.c
hw/debugger/: debugger.c  debugger_ui.c  disassembler_z80.c  meson.build  raylib-nuklear.c
hw/debugger/panels/: breakpoints.c  cpu.c  disassembler.c  display.c  memory.c  menubar.c  mmu.c  semihost.c  vram.c
hw/i2c/: at24c512.c  ds1307.c
hw/userport/: snes_adapter.c
hw/userport/snes-adapter/: controller.c  mouse.c  mouse.h  snes_adapter.c
hw/userport/snes_adapter/: controller.c  controller.h  meson.build  mouse.c  mouse.h  snes_adapter.c
hw/zvb/: bitmap_shader.glsl  default_font.c  gfx_debug.glsl  gfx_shader.frag  gfx_shader.glsl  meson.build  text_shader.frag  text_shader.glsl  zvb.c  zvb_affine2d.c  zvb_crc32.c  zvb_dma.c  zvb_font.c  zvb_palette.c  zvb_render_cpu.c  zvb_render_shaders.c  zvb_sound.c  zvb_spi.c  zvb_sprites.c  zvb_text.c  zvb_tilemap.c  zvb_tileset.c
hw/zvb/blitter/: shader.c  software.c
include/dbg/: gdbstub.h  packet.h  utils.h  zeal_dbg.h
include/debugger/: debugger.h  debugger_impl.h  debugger_types.h  debugger_ui.h  debugger_ui_mem.h  zeal_debugger.h
include/hw/: compactflash.h  device.h  flash.h  helpers.h  hostfs.h  i2c.h  keyboard.h  memory_op.h  mmu.h  mouse.h  pio.h  ram.h  semihost.h  uart.h  z80.h  zeal.h
include/hw/i2c/: at24c512.h  ds1307.h  i2c_device.h
include/hw/userport/: snes_adapter.h
include/hw/zvb/: default_font.h  zvb.h  zvb_affine2d.h  zvb_crc32.h  zvb_dma.h  zvb_font.h  zvb_palette.h  zvb_render.h  zvb_render_cpu.h  zvb_render_shaders.h  zvb_sound.h  zvb_spi.h  zvb_sprite.h  zvb_sprites.h  zvb_text.h  zvb_tilemap.h  zvb_tileset.h
include/hw/zvb/blitter/: blitter.h  shader.h
include/ui/: raylib-nuklear.h
include/utils/: config.h  fifo.h  files.h  helpers.h  log.h  notif.h  paths.h
raygui/: raygui.c  raygui.h
resources/: gamecontrollerdb.txt  meson.build
tools/: file_to_string.py  wasm_patch.py
utils/: config.c  fifo.c  files.c  files_import_lib.js  meson.build  notif.c  paths.c
