# meson_options.txt
option('show_fps', type: 'boolean', value: false, description: 'Show FPS')
option('raylib_path', type : 'string', value : '', description : 'Path to Raylib')
option('enable_debugger', type: 'boolean', value: true, description: 'Enable integrated debugger compilation')
option('wasm_template', type: 'string', value: 'native', description: 'The WASM Template to use, check assets/wasn')
option('embed_roms', type: 'boolean', value: true, description: 'Embed the `roms/` dir in WASM builds')
