# meson_options.txt
option('show_fps', type: 'boolean', value: false, description: 'Show FPS')
option('raylib_path', type : 'string', value : '', description : 'Path to Raylib')
option('enable_debugger', type: 'boolean', value: true, description: 'Enable integrated debugger compilation')
option('auto_attach_snes_mouse', type: 'boolean', value: true, description: 'Automatically attach the SNES mouse at startup')
option('target_retroflag_gpi2', type: 'boolean', value: false, description: 'Enable RetroFlag GPi Case 2 controller input mapping')
option('wasm_template', type: 'string', value: 'native', description: 'The WASM Template to use, check assets/wasn')
option('embed_roms', type: 'boolean', value: true, description: 'Embed the `roms/` dir in WASM builds')
option('linux_display_backend', type: 'combo', choices: ['x11', 'drm'], value: 'x11', description: 'Linux display backend used by Raylib')
