sources += files([
        'flash.c',
        'hostfs.c',
        'keyboard.c',
        'main.c',
        'mmu.c',
        'pio.c',
        'ram.c',
        'uart.c',
        'z80.c',
        'zeal.c',
        'i2c.c',
        'i2c/ds1307.c',
        'i2c/at24c512.c',
        'zeal_debugger.c' ])

subdir('zvb')
subdir('debugger')
